0028740: Visualization, AIS_RubberBand - add an option to decide either create or not create a closing boundary line

the flag is added and the Compute method is updated to consider this flag